add arguments to run task